# email-triage-openenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF_NOTES.md  README.md  ROUND1_MASTER_PLAN.md  SUBMISSION_WEBSITE_CHECKLIST.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  app.py  email_env.py  graders.py  models.py  reward.py  tasks.py
scripts/: create_handoff_zip.ps1  precheck.ps1  precheck.sh  run_local_eval.py
server/: app.py
tests/: test_env_api.py  test_graders.py  test_rewards.py
